Fix missing character in manual

--- a/documentation/unemoji-manual.tex
+++ b/documentation/unemoji-manual.tex
@@ -229,6 +229,7 @@ components, separated by hyphens. For this option, any \acronym{ZWJ} characters
 \stoplatex
 
 \section{Licence}
+\setupinteraction[style=\tf]
 
 Most files should list their licence near the top. In general, the code is
 licensed under the \goto{{\em Mozilla Public License}, version
