Provide more details about the specimens

--- a/documentation/unemoji-manual.tex
+++ b/documentation/unemoji-manual.tex
@@ -228,6 +228,14 @@ components, separated by hyphens. For this option, any \acronym{ZWJ} characters
 \emoji[twemoji]{1f1e8-1f1e6}
 \stoplatex
 
+\section{Available Characters}
+
+To view the full list of characters, fonts, and names available with \unemoji/,
+please consult the font specimens (links:
+\goto{Local}[unnamed-emoji-specimens::],
+\acronym{CTAN} (not yet\dots),
+\goto{GitHub}[url(https://github.com/gucci-on-fleek/unnamed-emoji/releases/latest/download/unnamed-emoji-specimens.pdf)]).
+
 \section{Licence}
 \setupinteraction[style=\tf]
 
@@ -317,6 +325,9 @@ If want to offer any improvements to the code below, please open an issue or a
 
 \subsection{unnamed-emoji.lua}
 \typeLUAfile{../source/unnamed-emoji.lua}
+
+\subsection{unemoji-specimens.cld}
+\typeLUAfile{../documentation/unemoji-specimens.cld}
 
 \subsection{dvipdfmx.patch}
 \typefile{../dvipdfmx.patch}
