Prepare new font "Fluent Flat"

--- a/documentation/unemoji-manual.tex
+++ b/documentation/unemoji-manual.tex
@@ -285,6 +285,13 @@ folder of
 and is licensed under
 \goto{\acronym{CC-BY}~4.0}[url(https://github.com/joypixels/emojione/blob/v2.2.7/LICENSE.md)].
 
+\subsection{Fluent Flat}
+
+\type{fluent-flat.pdf} (\q{Fluent Emoji}) was created from the \type{assets/**/Flat/} folder of
+\goto{\tt microsoft/fluentui-emoji@dfb5c3b7}[url(https://github.com/microsoft/fluentui-emoji/tree/dfb5c3b7)]
+and is licensed under the
+\goto{\it\acronym{MIT}~License}[url(https://github.com/microsoft/fluentui-emoji/blob/dfb5c3b7/LICENSE)].
+
 \page
 \setuplayout[
     width=middle,
