--- a/documentation/unemoji-manual.tex
+++ b/documentation/unemoji-manual.tex
@@ -318,6 +318,9 @@ If want to offer any improvements to the code below, please open an issue or a
 \subsection{svg-to-pdf.cld}
 \typeLUAfile{../source/svg-to-pdf.cld}
 
+\subsection{font-config.lua}
+\typeLUAfile{../source/font-config.lua}
+
 \subsection{unnamed-emoji.sty}
 \typeTEXfile{../source/unnamed-emoji.sty}
 
