Prepare new "Noto Blob" font

--- a/documentation/unemoji-manual.tex
+++ b/documentation/unemoji-manual.tex
@@ -292,6 +292,14 @@ and is licensed under
 and is licensed under the
 \goto{\it\acronym{MIT}~License}[url(https://github.com/microsoft/fluentui-emoji/blob/dfb5c3b7/LICENSE)].
 
+\subsection{Noto Blob}
+
+\type{noto-blob.pdf} (\q{Noto Emoji}) was created from the \type{svg/} folder
+of
+\goto{\tt googlefonts/noto-emoji@8f0a65b1}[url(https://github.com/googlefonts/noto-emoji/tree/8f0a65b1)]
+and is licensed under the
+\goto{{\em Apache License}, version 2.0}[url(https://github.com/googlefonts/noto-emoji/blob/8f0a65b1/LICENSE)].
+
 \page
 \setuplayout[
     width=middle,
