--- a/source/unnamed-emoji.tex
+++ b/source/unnamed-emoji.tex
@@ -11,7 +11,7 @@
 \catcode`@=11
 
 % Knuth "tex" compatibility
-\ifx\expanded\undefined
+\ifx\dimexpr\undefined
     {
         \def\gcsletcs#1#2{%
             \global%
@@ -117,6 +117,7 @@
 
 % Public command
 \def\emoji#1{%
+    \leavevmode%
     \unemoji@print{\emojifont}{#1}%
 }
 
